<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">


    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/paybooc_bold"
        android:text="@string/app_logo"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/paybooc_bold"


        android:id="@+id/tv_logosmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_logo_upper"

        app:layout_constraintBottom_toTopOf="@id/tv_logo"
        app:layout_constraintEnd_toEndOf="@id/tv_logo"
        />

    <TextView
        style="@style/StyleFontSmall"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/str_loading"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>