<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_buttons"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/iv_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:src="@drawable/border_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/v_result"
            app:layout_constraintDimensionRatio="1:1"/>

        <ImageView
            android:id="@+id/v_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:background="@drawable/border_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_board"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            style="@style/StyleEditText"

            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/str_levelname"

            android:layout_marginBottom="10dp"

            app:layout_constraintEnd_toEndOf="@id/btn_make"
            app:layout_constraintStart_toStartOf="@id/btn_make"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_make"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"

            app:layout_constraintEnd_toEndOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="@id/btn_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_make">

            <EditText
                style="@style/StyleEditText"

                android:id="@+id/et_height"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/str_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                style="@style/StyleEditText"

                android:id="@+id/et_width"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/str_width"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/et_height"
                app:layout_constraintBottom_toBottomOf="parent"
                android:inputType="number"/>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <Button
            android:id="@+id/btn_make"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_btn_accent"
            android:text="@string/str_loadimage"
            android:textColor="@color/colorBlack"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_make"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_btn"
            android:text="@string/str_cancel"
            android:textColor="@color/colorBlack"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>